# http-me-rust

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  IMPROVEMENTS.md  LICENSE  README.md  SECURITY.md  fastly.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.devcontainer/: Dockerfile
.github/workflows/: main.yaml  test_build_deploy.yaml  test_build_deploy_staging.yaml  test_requests.yaml
src/: fanout_util.rs  main.rs
static-assets/: alert.js  boiler-efficiency.html  challenge.css  client-side-protection-demo.css  client-side-protection-demo.html  client-side-protection-demo.js  csp-checker.js  csp-violation.html  dlp-test-data.html  evilhacker.js  form-fetch.html  form-login-embedded-challenge.html  form-login-seperate-domain.html  form-login.html  form-post-embedded-challenge.html  form-post-iframe.html  form-post.html  graphql-explorer.html  hello-ash.txt  htmx-qs.html  iframe-captcha.html  image-upload.html  invisible-iframe-challenge.html  openapi-spec.json  spa-handler.html  spa-waf-challenge.html  swagger.html  waf-interceptor.js  websocket-chat.html
